fix: align table row content to center

--- a/frontend/src/components/ListView/ListView.module.scss
+++ b/frontend/src/components/ListView/ListView.module.scss
@@ -65,14 +65,12 @@
 
 .cell {
   padding: 16px 20px;
-  vertical-align: top;
+  vertical-align: middle;
   border: none;
   background: transparent;
 }
 
 .upvoteCell {
-  align-self: center;
-  text-align: center;
   vertical-align: middle;
   width: 50px;
   padding: 0px 10px;
